--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,73 @@
-.vscode
-/build
-*.log
-*.data
-/imgui_backends
-imgui.ini
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+
+# Created by https://www.toptal.com/developers/gitignore/api/cmake,c++,vcpkg
+# Edit at https://www.toptal.com/developers/gitignore?templates=cmake,c++,vcpkg
+
+### C++ ###
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+/cmake-build-default/
+
+### CMake Patch ###
+# External projects
+*-prefix/
+
+### vcpkg ###
+# Vcpkg
+
+vcpkg-manifest-install.log
+
+## Manifest Mode
+vcpkg_installed/
+
+# End of https://www.toptal.com/developers/gitignore/api/cmake,c++,vcpkg
