--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           git clone https://github.com/microsoft/vcpkg
           cd vcpkg
-          bootstrap-vcpkg.bat
+          .\bootstrap-vcpkg.bat
 
       - name: Install dependencies
         env:
@@ -21,6 +21,7 @@ jobs:
           VCPKG_FEATURE_FLAGS: "manifests,versions"
         run: |
           .\vcpkg\vcpkg install --feature-flags=binarycaching,manifests
+        working-directory: vcpkg
 
       - name: Create Build Directory
         run: |
@@ -30,8 +31,10 @@ jobs:
         run: |
           cd cmake-build-debug
           cmake ..
+        env:
+          VCPKG_TOOLCHAIN_FILE: ${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
 
       - name: Build Project
         run: |
           cd cmake-build-debug
-          cmake --build . --config Debug
+          cmake --build .
