--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,14 @@ jobs:
       - name: Install vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg
-          cd vcpkg
-          .\bootstrap-vcpkg.bat
+          .\vcpkg\bootstrap-vcpkg.bat
 
       - name: Install dependencies
         env:
           VCPKG_DEFAULT_BINARY_CACHE: ${{ github.workspace }}/.vcpkgcache
           VCPKG_FEATURE_FLAGS: "manifests,versions"
         run: |
-          .\vcpkg\vcpkg install --feature-flags=binarycaching,manifests
-        working-directory: vcpkg
+          .\vcpkg\vcpkg.exe install --feature-flags=binarycaching,manifests
 
       - name: Create Build Directory
         run: |
