--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,30 +4,38 @@ on: [push, pull_request]
 
 jobs:
   build-and-test:
-    runs-on: windows-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install vcpkg
+      - name: Install vcpkg (Windows)
+        if: runner.os == 'Windows'
         run: |
           git clone https://github.com/microsoft/vcpkg
           .\vcpkg\bootstrap-vcpkg.bat
 
-      - name: Create vcpkg cache directory
+      - name: Install vcpkg (Ubuntu, macOS)
+        if: runner.os != 'Windows'
         run: |
-          mkdir "${{ github.workspace }}/vcpkgcache"
+          git clone https://github.com/microsoft/vcpkg
+          ./vcpkg/bootstrap-vcpkg.sh
+
+      - name: Create vcpkg cache directory
+        run: mkdir -p "${{ github.workspace }}/vcpkgcache"
 
       - name: Install dependencies
         run: |
-          .\vcpkg\vcpkg.exe install --feature-flags=binarycaching,manifests
+          ./vcpkg/vcpkg install --feature-flags=binarycaching,manifests
         env:
           VCPKG_DEFAULT_BINARY_CACHE: "${{ github.workspace }}/vcpkgcache"
           VCPKG_FEATURE_FLAGS: "manifests,versions"
 
       - name: Create Build Directory
-        run: |
-          md cmake-build-debug
+        run: mkdir cmake-build-debug
 
       - name: Configure CMake
         run: |
@@ -39,4 +47,4 @@ jobs:
       - name: Build Project
         run: |
           cd cmake-build-debug
-          cmake --build . --config Debug
+          cmake --build .
