--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,33 +12,29 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install vcpkg (Windows)
-        if: runner.os == 'Windows'
+      - name: Setup environment
         run: |
           git clone https://github.com/microsoft/vcpkg
-          .\vcpkg\bootstrap-vcpkg.bat
-
-      - name: Install vcpkg (Ubuntu, macOS)
-        if: runner.os != 'Windows'
-        run: |
-          git clone https://github.com/microsoft/vcpkg
-          ./vcpkg/bootstrap-vcpkg.sh
+          if [[ "${{ runner.os }}" == "Windows" ]]; then 
+              .\vcpkg\bootstrap-vcpkg.bat
+              echo "VCPKG_TARGET_TRIPLET=x64-windows" >> $GITHUB_ENV
+          else
+              ./vcpkg/bootstrap-vcpkg.sh
+              echo "VCPKG_TARGET_TRIPLET=x64-linux" >> $GITHUB_ENV
+          fi
 
       - name: Create vcpkg cache directory
         run: mkdir -p "${{ github.workspace }}/vcpkgcache"
 
-      - name: Install dependencies (Windows)
-        if: runner.os == 'Windows'
+      - name: Install dependencies
         run: |
-          ./vcpkg/vcpkg install --feature-flags=binarycaching,manifests
-        env:
-          VCPKG_DEFAULT_BINARY_CACHE: "${{ github.workspace }}/vcpkgcache"
-          VCPKG_FEATURE_FLAGS: "manifests,versions"
-
-      - name: Install dependencies (Ubuntu, macOS)
-        if: runner.os != 'Windows'
-        run: |
-          # Aqui execute o comando para instalar as bibliotecas necessárias para Ubuntu e macOS
+          if [[ "${{ runner.os }}" == "Windows" ]]; then 
+            ./vcpkg/vcpkg install --feature-flags=binarycaching,manifests
+          else
+            # remove incompatible features before install
+            sed -i '/imgui/d' vcpkg.json
+            vcpkg install --feature-flags=binarycaching,manifests
+          fi
         env:
           VCPKG_DEFAULT_BINARY_CACHE: "${{ github.workspace }}/vcpkgcache"
           VCPKG_FEATURE_FLAGS: "manifests,versions"
@@ -50,10 +46,8 @@ jobs:
         run: |
           cd cmake-build-debug
           cmake .. -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
-        env:
-          VCPKG_TARGET_TRIPLET: x64-windows
 
       - name: Build Project
         run: |
           cd cmake-build-debug
-          cmake --build .
+          cmake --build . --config Debug
