--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup environment
+      - name: Configurar ambiente
         run: |
           git clone https://github.com/microsoft/vcpkg
           if [[ "${{ runner.os }}" == "Windows" ]]; then 
@@ -23,31 +23,31 @@ jobs:
               echo "VCPKG_TARGET_TRIPLET=x64-linux" >> $GITHUB_ENV
           fi
 
-      - name: Create vcpkg cache directory
+      - name: Criar diretório de cache vcpkg
         run: mkdir -p "${{ github.workspace }}/vcpkgcache"
 
-      - name: Install dependencies
+      - name: Instalar dependências
         run: |
           if [[ "${{ runner.os }}" == "Windows" ]]; then 
             ./vcpkg/vcpkg install --feature-flags=binarycaching,manifests
           else
-            # remove incompatible features before install
-            sed -i '/imgui/d' vcpkg.json
+            # remove recursos incompatíveis antes da instalação
+            sed -i 's/, "imgui"[^,]*/ /' vcpkg.json
             vcpkg install --feature-flags=binarycaching,manifests
           fi
         env:
           VCPKG_DEFAULT_BINARY_CACHE: "${{ github.workspace }}/vcpkgcache"
           VCPKG_FEATURE_FLAGS: "manifests,versions"
 
-      - name: Create Build Directory
+      - name: Criar diretório de construção
         run: mkdir cmake-build-debug
 
-      - name: Configure CMake
+      - name: Configurar CMake
         run: |
           cd cmake-build-debug
           cmake .. -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
 
-      - name: Build Project
+      - name: Construir projeto
         run: |
           cd cmake-build-debug
           cmake --build . --config Debug
