--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Configurar ambiente
+        shell: bash
         run: |
           git clone https://github.com/microsoft/vcpkg
           if [[ "${{ runner.os }}" == "Windows" ]]; then 
@@ -24,7 +25,7 @@ jobs:
           fi
 
       - name: Instalar dependências do Ubuntu
-        if: matrix.os == 'ubuntu-latest'
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y libxmu-dev libxi-dev libgl-dev
@@ -37,7 +38,7 @@ jobs:
           if [[ "${{ runner.os }}" == "Windows" ]]; then 
             ./vcpkg/vcpkg install --feature-flags=binarycaching,manifests
           else
-            sed -i 's/,[[:space:]]*"dx11-binding",[[:space:]]*"win32-binding"[[:space:]]*//g' vcpkg.json
+            sed 's/,[[:space:]]*"dx11-binding",[[:space:]]*"win32-binding"[[:space:]]*//g' vcpkg.json | tee vcpkg.json
             ./vcpkg/vcpkg install --feature-flags=binarycaching,manifests
           fi
         env:
