--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           git clone https://github.com/microsoft/vcpkg
           if [[ "${{ runner.os }}" == "Windows" ]]; then 
-              .\vcpkg\bootstrap-vcpkg.bat
+              ./vcpkg/bootstrap-vcpkg.bat
               echo "VCPKG_TARGET_TRIPLET=x64-windows" >> $GITHUB_ENV
           else
               ./vcpkg/bootstrap-vcpkg.sh
