--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Instalar dependências do Ubuntu
         if: runner.os == 'Linux'
+        shell: bash
         run: |
           sudo apt-get update
           sudo apt-get install -y libxmu-dev libxi-dev libgl-dev
@@ -34,6 +35,7 @@ jobs:
         run: mkdir -p "${{ github.workspace }}/vcpkgcache"
 
       - name: Instalar dependências
+        shell: bash
         run: |
           if [[ "${{ runner.os }}" == "Windows" ]]; then
               ./vcpkg/vcpkg install --feature-flags=binarycaching,manifests
@@ -51,14 +53,17 @@ jobs:
           VCPKG_FEATURE_FLAGS: "manifests,versions"
 
       - name: Criar diretório de construção
+        shell: bash
         run: mkdir cmake-build-debug
 
       - name: Configurar CMake
+        shell: bash
         run: |
           cd cmake-build-debug
           cmake .. -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
 
       - name: Construir projeto
+        shell: bash
         run: |
           cd cmake-build-debug
           cmake --build . --config Debug
