--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,16 @@ jobs:
               echo "VCPKG_TARGET_TRIPLET=x64-linux" >> $GITHUB_ENV
           fi
 
-      - name: Configurar Dependiencias
+      - name: Configurar Dependencias
         shell: bash
         run: |
           if [[ "${{ runner.os }}" == "Windows" ]]; then
               CONFIG_BLOCK='{ "name" : "imgui", "features" : [ "glfw-binding", "opengl3-binding", "dx11-binding", "win32-binding", "docking-experimental" ], "$comment" : "..." }'
           else
-              CONFIG_BLOCK='{ "name" : "imgui", "features" : [ "glfw-binding", "opengl3-binding", "docking-experimental" ], "$comment" : "..." }'
+              CONFIG_BLOCK='{ "name" : "imgui", "features" : [ "glfw-binding", "opengl3-binding","docking-experimental" ], "$comment" : "..." }'
           fi
-
-          sed "s|{ \"name\" : \"imgui\" .*}|${CONFIG_BLOCK}|" vcpkg.json > temp.json && mv temp.json vcpkg.json
+          IMG_PATTERN='# aqui vai o seu padrao da linha imgui em vcpkg.json'
+          sed "s|$IMG_PATTERN|$CONFIG_BLOCK|" vcpkg.json > temp.json && mv temp.json vcpkg.json
 
       - name: Instalar dependências do Ubuntu
         if: runner.os == 'Linux'
