--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,22 +10,22 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout código-fonte
+        uses: actions/checkout@v2
 
-      - name: Configurar ambiente
-        shell: bash
+      - name: Inicializar vcpkg e definir ambiente
         run: |
           git clone https://github.com/microsoft/vcpkg
-          if [[ "${{ runner.os }}" == "Windows" ]]; then 
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
             ./vcpkg/bootstrap-vcpkg.bat
             echo "VCPKG_TARGET_TRIPLET=x64-windows" >> $GITHUB_ENV
           else
             ./vcpkg/bootstrap-vcpkg.sh
             echo "VCPKG_TARGET_TRIPLET=x64-linux" >> $GITHUB_ENV
           fi
-
-      - name: Configurar Dependencias
         shell: bash
+
+      - name: Ajustar dependências para não-Windows
         run: |
           if [[ "${{ runner.os }}" == "Linux" ]]; then
             sed -i '/"dx11-binding",/d' vcpkg.json
@@ -34,43 +34,53 @@ jobs:
             sed -i '' '/"dx11-binding",/d' vcpkg.json
             sed -i '' '/"win32-binding",/d' vcpkg.json
           fi
-
-      - name: Instalar dependências do Ubuntu
-        if: runner.os == 'Linux'
         shell: bash
+
+      - name: Instalar dependências de desenvolvimento Ubuntu (para Linux)
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y libxmu-dev libxi-dev libgl-dev
-
-      - name: Instalar dependências adicionais para GLFW
-        if: runner.os == 'Linux'
         shell: bash
+
+      - name: Instalar dependências adicionais para GLFW (para Linux)
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get install -y libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev pkg-config
+        shell: bash
 
-      - name: Criar diretório de cache vcpkg
+      - name: Criar diretório para cache do vcpkg
         run: mkdir -p "${{ github.workspace }}/vcpkgcache"
 
-      - name: Instalar dependências
-        shell: bash
+      - name: Instalar pacotes usando vcpkg
         run: |
           ./vcpkg/vcpkg install --feature-flags=binarycaching,manifests
         env:
           VCPKG_DEFAULT_BINARY_CACHE: "${{ github.workspace }}/vcpkgcache"
           VCPKG_FEATURE_FLAGS: "manifests,versions"
-
-      - name: Criar diretório de construção
         shell: bash
-        run: mkdir cmake-build-debug
 
-      - name: Configurar CMake
+      - name: Definir arquivo toolchain do vcpkg
+        shell: bash
+        run: |
+          if [[ "${{ runner.os }}" == "Windows" ]]; then 
+            echo "VCPKG_TOOLCHAIN_FILE=${{ github.workspace }}\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake" >> $GITHUB_ENV
+          else
+            echo "VCPKG_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
+          fi
+
+      - name: Criar diretório para build do CMake
+        run: mkdir cmake-build-debug
+        shell: bash
+
+      - name: Configurar Projeto com CMake
         shell: bash
         run: |
           cd cmake-build-debug
-          cmake .. -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
+          cmake .. -DCMAKE_TOOLCHAIN_FILE=$VCPKG_TOOLCHAIN_FILE
 
-      - name: Construir projeto
-        shell: bash
+      - name: Fazer a build do projeto com CMake
         run: |
           cd cmake-build-debug
           cmake --build . --config Debug
+        shell: bash
