Modificação do arquivo CmakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,15 @@
 cmake_minimum_required(VERSION 3.12)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fcoroutines")
 
 if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
     set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
 endif()
 
-# Nome do projeto
 set(PROJECT_NAME "VisualizadorDeAlgortimos-VCPKG-CLION-WIN11-IMGUI-CMAKE")
 project(${PROJECT_NAME})
 
-# Adiciona a flag de debug
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include_directories(cmake-build-debug/vcpkg_installed/x64-windows)
@@ -21,10 +20,8 @@ include_directories(include/algorithms/graphs/djikstra)
 include_directories(include/algorithms/sorts/bubblesort)
 include_directories(include/algorithms/sorts/quicksort)
 
-# Adiciona o diretório src com os arquivos fonte do projeto
 file(GLOB SRC_FILES CONFIGURE_DEPENDS "src/*.hpp" "src/*.cpp")
 
-# Adiciona os arquivos fonte ao projeto, e cria um executável
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 FIND_PACKAGE(glfw3 CONFIG REQUIRED)
@@ -36,10 +33,4 @@ FIND_PACKAGE(imgui CONFIG REQUIRED)
 FIND_PACKAGE(TBB CONFIG REQUIRED)
 FIND_PACKAGE(range-v3 CONFIG REQUIRED)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE range-v3::meta range-v3::concepts range-v3::range-v3 glfw glad::glad glm::glm OpenGL::GL GLEW::GLEW imgui::imgui TBB::tbb TBB::tbbmalloc TBB::tbbmalloc_proxy)
-
-
-
-
-
-
+target_link_libraries(${PROJECT_NAME} PRIVATE range-v3::meta range-v3::concepts range-v3::range-v3 glfw glad::glad glm::glm OpenGL::GL GLEW::GLEW imgui::imgui TBB::tbb)
